tests/snapshots/ui_snapshots__combat_after_casting.snap
---
source: tests/ui_snapshots.rs
expression: frame(&app)
---
"┌Enemies───────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                  ▸ Spider                                                        │"
"│                                   /\oo/\                                                         │"
"│                                    (..)                                                          │"
"│                                   /|||||\                                                        │"
"│                                  HP ██░░░░ 4/10                                                  │"
"│                                  Attack 2                                                        │"
"│                                  Burned (2)                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│You cast Fireball.                                                                                │"
"│Spider takes 6 damage.                                                                            │"
"│Spider is Burned.                                                                                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌You─────────────────────┐┌Incantation─────────────────────────────────────────────────────────────┐"
"│HP ██████ 20/20         ││Build: (empty)                                                          │"
"│MP ████░░ 3/5           ││pick spells below to build a spell                                      │"
"│Round 1                 ││ Cast    End Turn      ↑↓ move · ←→ pick · Enter do · Bksp undo         │"
"└────────────────────────┘└────────────────────────────────────────────────────────────────────────┘"
"┌ 1 Ember──────────┐┌ 2 Douse──────────┐┌ 3 Gust───────────┐┌ 4 ───────────────┐┌ 5 ───────────────┐"
"│   ^              ││   o              ││  ~~~             ││                  ││                  │"
"│  /^\             ││  (~)             ││ ~~~~~            ││                  ││                  │"
"│ (###)            ││ (~~~)            ││  ~~~             ││                  ││                  │"
"│Flame · pow 3     ││Water · pow 2     ││Gust · pow 2      ││                  ││                  │"
"│1 MP              ││1 MP              ││1 MP              ││                  ││                  │"
"│Stacks bigger     ││Soaks target      ││Spreads to all    ││                  ││                  │"
"└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘"
