tests/snapshots/ui_snapshots__game_over_screen.snap
---
source: tests/ui_snapshots.rs
expression: frame(&app)
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                              │"
"│                                           YOU FALL                                           │"
"│                                                                                              │"
"│                                       Depth reached   1                                      │"
"│                                       Nodes cleared   1                                      │"
"│                                       Seed            7                                      │"
"│                                                                                              │"
"│                                     Ember   Douse   Gust                                     │"
"│                                                                                              │"
"│                                 r to climb again    q to quit                                │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
