tests/snapshots/ui_snapshots__incantation_preview_becomes_firestorm.snap
---
source: tests/ui_snapshots.rs
expression: frame(&app)
---
"┌Enemies───────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                  ▸ Spider                                                        │"
"│                                   /\oo/\                                                         │"
"│                                    (..)                                                          │"
"│                                   /|||||\                                                        │"
"│                                  HP ██████ 10/10                                                 │"
"│                                  Attack 2                                                        │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Log───────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌You─────────────────────┐┌Incantation─────────────────────────────────────────────────────────────┐"
"│HP ██████ 20/20         ││Build: [Ember] + [Ember] + [Gust]                                       │"
"│MP ██████ 5/5           ││FIRESTORM  5 dmg · ALL enemies · 3 MP  Burned (2)                       │"
"│Round 1                 ││ Cast    End Turn      ↑↓ move · ←→ pick · Enter do · Bksp undo         │"
"└────────────────────────┘└────────────────────────────────────────────────────────────────────────┘"
"┌ 1 Ember──────────┐┌ 2 Douse──────────┐┌▸3 Gust───────────┐┌ 4 ───────────────┐┌ 5 ───────────────┐"
"│   ^              ││   o              ││  ~~~             ││                  ││                  │"
"│  /^\             ││  (~)             ││ ~~~~~            ││                  ││                  │"
"│ (###)            ││ (~~~)            ││  ~~~             ││                  ││                  │"
"│Flame · pow 3     ││Water · pow 2     ││Gust · pow 2      ││                  ││                  │"
"│1 MP              ││1 MP              ││1 MP              ││                  ││                  │"
"│Stacks bigger     ││Soaks target      ││Spreads to all    ││                  ││                  │"
"└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘"
