tests/snapshots/ui_snapshots__map_screen.snap
---
source: tests/ui_snapshots.rs
expression: frame(&app(7))
---
"┌The Climb -- next: Fight──────────────────────────────────────────────────────────────────────┐"
"│     ☠                                                                                        │"
"│                                                                                              │"
"│     ⚔    ⚔    ?                                                                              │"
"│                                                                                              │"
"│     ?    ?                                                                                   │"
"│                                                                                              │"
"│     ?    ?                                                                                   │"
"│                                                                                              │"
"│     ⚔                                                                                        │"
"│                                                                                              │"
"│  ⚔ fight    ? event    ☠ boss                                                                │"
"│  ←/→ choose    Enter to travel    q to quit                                                  │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"│                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Spellbook─────────────────────────────────────────────────────────────────────────────────────┐"
"│HP ██████████ 20/20   MP ██████ 5/5                                                           │"
"│Ember (1MP)   Douse (1MP)   Gust (1MP)                                                        │"
"└──────────────────────────────────────────────────────────────────────────────────────────────┘"
