tests/snapshots/ui_snapshots__map_screen_part_way_through_a_run.snap
---
source: tests/ui_snapshots.rs
expression: frame(&app)
---
"┌The Climb  ▸ Event────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                               ╱─☠─╲                                              │"
"│                                          ╱────  │  ────╲                                         │"
"│                                    ╱─────       │       ─────╲                                   │"
"│                                 ⚔──            ╱$╲            ──⚔                                │"
"│                                  ╲         ╱───   ───╲         ╱                                 │"
"│                                   ─╲   ╱───           ───╲   ╱─                                  │"
"│                                     ?──                  ╱──⚔                                    │"
"│                                     │            ╱───────   │                                    │"
"│                                     │    ╱───────           │                                    │"
"│                                    [?]───                   $                                    │"
"│                                     │                       │                                    │"
"│                                     │                       │                                    │"
"│                                    (⚔)                      ⚔                                    │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Spellbook─────────────────────────────────────────────────────────────────────────────────────────┐"
"│HP ██████████ 20/20   MP ██████ 98/5   10 gold                                                    │"
"│⚔ fight   ? event   $ shop   ☠ boss      ←→ choose   Enter to travel                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
