tests/snapshots/ui_snapshots__options_screen.snap
---
source: tests/ui_snapshots.rs
expression: frame(&app)
---
"┌Options───────────────────────────────────────────────────────────────────────────────────────────┐"
"│ ▸ Map length    ◂  Standard (5 rows)   ▸                                                         │"
"│   Difficulty    ◂       Standard       ▸                                                         │"
"│   Log speed     ◂        Normal        ▸                                                         │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                        ↑↓ choose setting    ←→ change it    Enter to go back                       "
"                                                                                                    "
"                              Options apply to the next run you start.                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
