tests/snapshots/ui_snapshots__replacement_screen.snap
---
source: tests/ui_snapshots.rs
expression: frame(&app)
---
"┌Your spell slots are full─────────────────────────────────────────────────────────────────────────┐"
"│Taking Spore  (Toxic · pow 3 · 2 MP)                                                              │"
"│Poisons                                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ 1 Ember ─────────┐┌ 2 Douse ─────────┐┌ 3 Gust ──────────┐┌ 4 Ember ─────────┐┌ 5 Ember ─────────┐"
"│   ^              ││   o              ││  ~~~             ││   ^              ││   ^              │"
"│  /^\             ││  (~)             ││ ~~~~~            ││  /^\             ││  /^\             │"
"│ (###)            ││ (~~~)            ││  ~~~             ││ (###)            ││ (###)            │"
"│Flame · pow 3     ││Water · pow 2     ││Gust · pow 2      ││Flame · pow 3     ││Flame · pow 3     │"
"│1 MP              ││1 MP              ││1 MP              ││1 MP              ││1 MP              │"
"│Stacks bigger     ││Soaks target      ││Spreads to all    ││Stacks bigger     ││Stacks bigger     │"
"└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘"
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│←→ choose which spell to discard    Enter to confirm                                              │"
"│                                                                                                  │"
"│Backspace to cancel and take nothing.                                                             │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
