tests/snapshots/ui_snapshots__reward_screen.snap
---
source: tests/ui_snapshots.rs
expression: frame(&app)
---
"┌Victory───────────────────────────────────────────────────────────────────────────────────────────┐"
"│The way is clear.                                                                                 │"
"│+10 gold   (purse: 10)                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Spore ─────────────┐┌ Surge ─────────────┐┌ Frost ─────────────┐┌ Skip ──────┐                    "
"│  .:.               ││   /|               ││  \|/               ││            │                    "
"│ (:::)              ││  /_|               ││  -*-               ││Take nothing│                    "
"│  ':'               ││   /                ││  /|\               ││            │                    "
"│Toxic · pow 3       ││Shock · pow 5       ││Ice · pow 4         ││            │                    "
"│2 MP                ││3 MP                ││2 MP                ││            │                    "
"│Poisons             ││2x vs soaked        ││Freezes at T2       ││            │                    "
"└────────────────────┘└────────────────────┘└────────────────────┘└────────────┘                    "
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│←→ choose    Enter to take    (or pick Skip)                                                      │"
"│                                                                                                  │"
"│Spell slots: 3/5                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
