tests/snapshots/ui_snapshots__reward_screen_choosing_what_to_replace.snap
---
source: tests/ui_snapshots.rs
expression: frame(&app)
---
"┌Victory───────────────────────────────────────────────────────────────────────────────────────────┐"
"│The way is clear.                                                                                 │"
"│+10 gold   (purse: 10)                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ 1 Ember ─────────┐┌ 2 Douse ─────────┐┌ 3 Gust ──────────┐┌ 4 Ember ─────────┐┌ 5 Ember ─────────┐"
"│   ^              ││   o              ││  ~~~             ││   ^              ││   ^              │"
"│  /^\             ││  (~)             ││ ~~~~~            ││  /^\             ││  /^\             │"
"│ (###)            ││ (~~~)            ││  ~~~             ││ (###)            ││ (###)            │"
"│Flame · pow 3     ││Water · pow 2     ││Gust · pow 2      ││Flame · pow 3     ││Flame · pow 3     │"
"│1 MP              ││1 MP              ││1 MP              ││1 MP              ││1 MP              │"
"│Stacks bigger     ││Soaks target      ││Spreads to all    ││Stacks bigger     ││Stacks bigger     │"
"└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘└──────────────────┘"
"┌Slots are full────────────────────────────────────────────────────────────────────────────────────┐"
"│Replace with Spore  (Toxic · pow 3 · 2 MP)                                                        │"
"│                                                                                                  │"
"│←→ choose which to discard    Enter to confirm    Bksp to go back                                 │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
